--- a/mod_zebra_photogallery/language/en-GB/en-GB.mod_zebra_photogallery.ini
+++ b/mod_zebra_photogallery/language/en-GB/en-GB.mod_zebra_photogallery.ini
@@ -8,7 +8,7 @@ MOD_ZEBRA_PHOTOGALLERY_FIELD_IMAGES_PER_PAGE_LABEL="Images per Page"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_IMAGES_PER_PAGE_DESC="Enter the number of images to display per page."
 MOD_ZEBRA_PHOTOGALLERY_FIELD_IMAGES_ALT_LABEL="Images ALT"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_IMAGES_ALT_DESC="Enter the project name to insert into the alt attributes of the images."
-MOD_ZEBRA_PHOTOGALLERY="Zebra Photo Gallery Module"
+MOD_ZEBRA_PHOTOGALLERY="Photo Gallery Module"
 MOD_ZEBRA_PHOTOGALLERY_DESC="Displays a photo gallery with images from a local server URL."
 MOD_ZEBRA_PHOTOGALLERY_NO_IMAGES="No images found to display."
 MOD_ZEBRA_PHOTOGALLERY_WEB_ALT_NAME="Your Website Name"
@@ -30,3 +30,4 @@ MOD_ZEBRA_PHOTOGALLERY_TEMPLATE_ESPECIASYSABORES="EspeciasySabores"
 MOD_ZEBRA_PHOTOGALLERY_TEMPLATE_DELEGARIA="DelegarIA"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_ENABLE_FANCYBOX_LABEL="Enable FancyBOX"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_ENABLE_FANCYBOX_DESC="FancyBOX on the same screen as the gallery or if disabled opens the image in a new link"
+MOD_ZEBRA_PHOTOGALLERY_COPYRIGHT="Zebra Photo Gallery"
