--- a/mod_zebra_photogallery/language/en-GB/en-GB.mod_zebra_photogallery.sys.ini
+++ b/mod_zebra_photogallery/language/en-GB/en-GB.mod_zebra_photogallery.sys.ini
@@ -1,6 +1,6 @@
-; English (en-GB) language file for MOD_ZEBRA_PHOTOGALLERY module system
 MOD_ZEBRA_PHOTOGALLERY_CONFIG_DESC="Configuration Description"
 MOD_ZEBRA_PHOTOGALLERY="Zebra Photo Gallery"
 MOD_ZEBRA_PHOTOGALLERY_DESCRIPTION="<h2>DesarrollarIA.com</h2><p><img src='../modules/mod_zebra_photogallery/media/img/Zebra-Logo-Gallery.png'> Photo Gallery v1.0 </p><p><strong>Compatible with:</strong> PC, Laptop, Tablet, Mobile</p><p><strong>NEW Image Features</strong><ul><li> Images with ALT</li><li> Navigation Menu</li><li> Responsive</li><li> FancyBOX</li><li> Configuration of Images per page</li><li> Column Configuration (Max 6 Columns)</li><li> Cache Configuration</li><li> Image Formats: .jpg |.jpeg |.png |.gif</li><li> <strong>NEW WEB FORMAT</strong> for Images: .webp</li></ul><strong>NEW Templates</strong><ul><li> Default</li><li> GenerarIA.com</li><li> DesarrollarIA.com</li><li> EspeciasySabores.com</li><li> DelegarIA.com</li></ul></p>"
 MOD_ZEBRA_PHOTOGALLERY_NO_IMAGES="No images to display"
 MOD_ZEBRA_PHOTOGALLERY_COPYRIGHT="Zebra Photo Gallery"
+MOD_PHOTO_GALLERY_PAGE_NAVIGATION="Page Navigation"
