--- a/mod_zebra_photogallery/language/en-US/en-US.mod_zebra_photogallery.ini
+++ b/mod_zebra_photogallery/language/en-US/en-US.mod_zebra_photogallery.ini
@@ -1,4 +1,3 @@
-; English (en-US) language file for MOD_ZEBRA_PHOTOGALLERY module
 MOD_ZEBRA_PHOTOGALLERY_CONFIG_TITLE="Basic Configuration"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_REPO_URL_LABEL="Server URL"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_REPO_URL_DESC="Enter the URL of the local server where the images are located."
@@ -10,10 +9,9 @@ MOD_ZEBRA_PHOTOGALLERY_FIELD_IMAGES_ALT_LABEL="Images ALT"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_IMAGES_ALT_DESC="Enter the project name to insert into the alt attributes of the images."
 MOD_ZEBRA_PHOTOGALLERY="Photo Gallery Module"
 MOD_ZEBRA_PHOTOGALLERY_DESC="Displays a photo gallery with images from a local server URL."
-MOD_ZEBRA_PHOTOGALLERY_NO_IMAGES="No images found to display."
+MOD_ZEBRA_PHOTOGALLERY_NO_IMAGES="No images to display"
 MOD_ZEBRA_PHOTOGALLERY_WEB_ALT_NAME="Your Website Name"
 MOD_ZEBRA_PHOTOGALLERY_DESCRIPTION="<div class='alert alert-info accordion accordion-flush' id='accordionFlushExample'><div class='accordion-item'><h2 class='accordion-header' id='flush-headingOne'><button class='accordion-button collapsed' type='button' data-bs-toggle='collapse' data-bs-target='#flush-collapseOne' aria-expanded='false' aria-controls='flush-collapseOne'> INFORMATION  </button>  </h2>  <div id='flush-collapseOne' class='accordion-collapse collapse' aria-labelledby='flush-headingOne' data-bs-parent='#accordionFlushExample'><div class='accordion-body'><h2>DesarrollarIA.com</h2><p><img src='../modules/mod_zebra_photogallery/media/img/Zebra-Logo-Gallery.png'>Photo Gallery v1.0 </p><p><strong>Compatible with:</strong> PC, Laptop, Tablet, Mobile</p><p><strong>NEW Image Features</strong><ul><li> Images with ALT</li><li> Navigation Menu</li><li> Responsive</li><li> FancyBOX</li><li> Configuration of Images per page</li><li> Column Configuration (Max 6 Columns)</li><li> Cache Configuration</li><li> Image Formats: .jpg |.jpeg |.png |.gif</li><li> <strong>NEW WEB FORMAT</strong> for Images: .webp</li></ul><strong>NEW Templates</strong><ul><li> Default</li><li> GenerarIA</li><li> DesarrollarIA</li><li> EspeciasySabores</li><li> DelegarIA</li></ul></p></div> </div></div></div> <h2>Configuration Panel</h2>"
-MOD_ZEBRA_PHOTOGALLERY_NO_IMAGES="No images to display"
 MOD_ZEBRA_PHOTOGALLERY_PREV_PAGE="Previous"
 MOD_ZEBRA_PHOTOGALLERY_NEXT_PAGE="Next"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_CACHE_LIFETIME_LABEL="Cache Time"
@@ -31,3 +29,4 @@ MOD_ZEBRA_PHOTOGALLERY_TEMPLATE_DELEGARIA="DelegarIA"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_ENABLE_FANCYBOX_LABEL="Enable FancyBOX"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_ENABLE_FANCYBOX_DESC="FancyBOX on the same screen as the gallery or if disabled opens the image in a new link"
 MOD_ZEBRA_PHOTOGALLERY_COPYRIGHT="Zebra Photo Gallery"
+MOD_PHOTO_GALLERY_PAGE_NAVIGATION="Page Navigation"
