--- a/mod_zebra_photogallery/language/es-ES/es-ES.mod_zebra_photogallery.sys.ini
+++ b/mod_zebra_photogallery/language/es-ES/es-ES.mod_zebra_photogallery.sys.ini
@@ -1,6 +1,6 @@
-; Spanish (es-ES) language file for MOD_ZEBRA_PHOTOGALLERY module system
 MOD_ZEBRA_PHOTOGALLERY_CONFIG_DESC="Descripción de Configuración"
 MOD_ZEBRA_PHOTOGALLERY="Zebra Galería de Foto"
 MOD_ZEBRA_PHOTOGALLERY_DESCRIPTION="<h2>DesarrollarIA.com</h2><p><img src='../modules/mod_zebra_photogallery/media/img/Zebra-Logo-Gallery.png'> Galería de Fotos v1.0 </p><p><strong>Compatible con:</strong> PC, Laptop, Tablet, Móvil</p><p><strong>NOVEDAD de Imágenes</strong><ul><li> Imágenes con ALT</li><li> Menú de Navegación</li><li> Responsive</li><li> FancyBOX</li><li> Configuración de Imágenes por páginas</li><li> Configuración de columnas (Max 6 Columnas)</li><li> Configuración de Caché</li><li> Formato de Imágenes: .jpg |.jpeg |.png |.gif</li><li> <strong>NUEVO FORMATO WEB</strong> de Imágenes: .webp</li></ul><strong>NOVEDAD de Plantillas</strong><ul><li> Por defecto</li><li> GenerarIA.com</li><li> DesarrollarIA.com</li><li> EspeciasySabores.com</li><li> DelegarIA.com</li></ul></p>"
 MOD_ZEBRA_PHOTOGALLERY_NO_IMAGES="No hay imágenes para mostrar"
 MOD_ZEBRA_PHOTOGALLERY_COPYRIGHT="Zebra Galería de fotos"
+MOD_PHOTO_GALLERY_PAGE_NAVIGATION="Navegación de Páginas"
