--- a/mod_zebra_photogallery/language/es-ES/es-ES.mod_zebra_photogallery.ini
+++ b/mod_zebra_photogallery/language/es-ES/es-ES.mod_zebra_photogallery.ini
@@ -1,4 +1,3 @@
-;es-ES (Español)
 MOD_ZEBRA_PHOTOGALLERY="Zebra Galería de Fotos"
 MOD_ZEBRA_PHOTOGALLERY_DESC="Muestra una galería de fotos con imágenes desde una URL de servidor local."
 MOD_ZEBRA_PHOTOGALLERY_CONFIG_TITLE="Configuración Básica"
@@ -30,3 +29,4 @@ MOD_ZEBRA_PHOTOGALLERY_TEMPLATE_DELEGARIA="DelegarIA"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_ENABLE_FANCYBOX_LABEL="Activar FancyBOX"
 MOD_ZEBRA_PHOTOGALLERY_FIELD_ENABLE_FANCYBOX_DESC="FancyBOX en la misma pantalla de la galería o si esta desactivada abre en un nuevo link la imagen"
 MOD_ZEBRA_PHOTOGALLERY_COPYRIGHT="Zebra Galería de fotos"
+MOD_PHOTO_GALLERY_PAGE_NAVIGATION="Navegación de Páginas"
